versioned_docs/version-21.0/Files/UI/Enterprise-Manager/Opening-Import-Export.md
# Opening Import Export

The **Import Export** tool can be opened from within the Enterprise Manager.

To open the tool:

Double-click on **Import Export** under the **External Tools** topic.
The **Log in to Schedule Import/Export** dialog displays.

:::note
For procedures on creating OpCon User Accounts, refer to [Managing User Accounts](Managing-User-Accounts.md).
:::

In the **Username** text box:

a.  For manual login, enter a *case-sensitive user login ID* (e.g.,
    ocadm) **or**
b.  For first-time automatic login, **do not** enter a username in this
    field. Schedule Import/Export will get your network login and pass
    it through to the database.

In the **Password** text box:

a.  For manual login, enter the *case-sensitive password* for the user
    **or**
b.  For first-time automatic login, **do not** enter a password in this
    field.

Enter the *data source*.

Click the **OK** button to open **Schedule Import/Export**.

:::note
For conceptual information about the Schedule Import/Export, refer to [Schedule Import/Export](../../../utilities/Graphical-Utilities/Schedule-Import_Export.md) in the **Utilities** online help.
:::
